--- a/.github/workflows/langbench.yaml
+++ b/.github/workflows/langbench.yaml
@@ -35,7 +35,7 @@ on:
 
 jobs:
   langbench:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     permissions:
       contents: write
     services:
